# droplet

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.d.ts  index.js  package.json  test.js  test.mjs
.github/workflows/: CI.yml
.test2/: TESTFILE
__test__/: debug.spec.mjs  manifest.spec.mjs  manifest.spec.ts  script.spec.mjs  trust.spec.mjs  trust.spec.ts  utils.spec.mjs
assets/: generate.sh
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
patches/: rawzip+0.2.0.patch
src/: chunker.rs  file_utils.rs  lib.rs  manifest.rs  ssl.rs  version.rs
src/script/: mod.rs
src/version/: backends.rs  mod.rs  types.rs  utils.rs
