[package]
edition = "2021"
name = "droplet"
version = "0.3.7"
license = "AGPL-3.0-only"
description = "Droplet is a `napi.rs` Rust/Node.js package full of high-performance and low-level utils for Drop"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-beta.11", default-features = false, features = [
    "napi6",
    "async",
    "web_stream",
    "error_anyhow",
] }
napi-derive = "3.0.0-beta.11"
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
rhai = "1.22.2"
# mlua = { version = "0.11.2", features = ["luajit"] }
boa_engine = "0.20.0"
serde_json = "1.0.143"
anyhow = "*"
droplet-rs = { git = "https://github.com/Drop-OSS/droplet-rs.git" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
